<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single"
        android:id="@+id/group3"
        >
        <item android:id="@+id/navTimNhaHang"
            android:title="@string/tim_nha_hang"
            android:icon="@drawable/ic_restaurant_black_24dp"
            />

        <item android:id="@+id/navTimCafe"
            android:title="@string/tim_cafe"
            android:icon="@drawable/ic_local_cafe_black_24dp"
            />

        <item android:id="@+id/navThayDoiBanKinh"
            android:title="@string/dc_ban_kinh_tim_kiem"
            android:icon="@drawable/ic_pham_vi_tim_kiem_24dp"
            />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group1"
        >
        <item android:id="@+id/navLocation"
            android:title="@string/location"
            android:icon="@drawable/ic_location"
            />

        <item android:id="@+id/navIdea"
            android:title="@string/y_tuong"
            android:icon="@drawable/ic_idea"
            />
    </group>

    <group android:checkableBehavior="none"
        android:id="@+id/group2"
        >
            <item android:id="@+id/navDanhgia"
                android:title="@string/danh_gia"/>

            <item android:id="@+id/navPhanhoi"
                android:title="@string/phan_hoi"/>

            <item android:id="@+id/navThongtin"
                android:title="@string/thong_tin"/>
    </group>
</menu>